--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version "${loom_version}"
 	id 'maven-publish'
+	id 'com.google.protobuf' version '0.9.4'
 }
 
 version = project.mod_version
@@ -11,11 +12,7 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	mavenCentral()
 }
 
 loom {
@@ -27,18 +24,53 @@ loom {
 			sourceSet sourceSets.client
 		}
 	}
-
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings loom.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	implementation 'com.google.protobuf:protobuf-java:3.25.1'
+
+	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
+	implementation 'org.postgresql:postgresql:42.7.3'
+	implementation 'com.zaxxer:HikariCP:5.1.0'
+
+	include 'com.google.protobuf:protobuf-java:3.25.1'
+	include 'org.hibernate.orm:hibernate-core:6.4.4.Final'
+	include 'org.postgresql:postgresql:42.7.3'
+	include 'com.zaxxer:HikariCP:5.1.0'
+	include 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+	include 'io.smallrye:jandex:3.1.2'
+	include 'com.fasterxml:classmate:1.5.1'
+	include 'net.bytebuddy:byte-buddy:1.14.11'
+	include 'org.jboss.logging:jboss-logging:3.5.0.Final'
+	include 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	include 'jakarta.transaction:jakarta.transaction-api:2.0.1'
+	include 'org.antlr:antlr4-runtime:4.13.0'
+}
+
+protobuf {
+	protoc {
+		artifact = 'com.google.protobuf:protoc:3.25.1'
+	}
+	generateProtoTasks {
+		all().each { task ->
+			task.builtins {
+				java {}
+			}
+		}
+	}
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs 'build/generated/source/proto/main/java'
+		}
+	}
 }
 
 processResources {
@@ -54,11 +86,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
-
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
 }
@@ -71,7 +99,6 @@ jar {
 	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		create("mavenJava", MavenPublication) {
@@ -80,11 +107,6 @@ publishing {
 		}
 	}
 
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
 	}
 }
